# inat-sorter

./: .gitignore  README.md  pyproject.toml
src/inaturalist_sorter/: sort.py
